--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
 
 <body>
 
+    <!-- ======= Top-Bar ======= -->
+    <div id="topbar" class="d-flex">
+        <div class="container d-flex align-items-center justify-content-end">
+            <ul class="nav">
+                <li class="nav-item"><a class="nav-link white" href="#">Learn to Ride</a></li>
+                <li class="nav-item"><a class="nav-link white" href="#">Test Ride</a></li>
+                <li class="nav-item"><a class="nav-link white" href="#">Dealer Locator</a></li>
+                <li class="nav-item">
+                    <a class="nav-link white" href="#">
+                        <img src="assets/img/india.png" alt="india" class="india-img">India - English
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap js -->
