--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
             </ul>
         </div>
     </div>
+    <!-- ======= HEADER START ======= -->
+    <header id="header" class="header container d-flex justify-content-between align-items-center p-0">
+        <div class="d-flex align-items-center">
+            <div class="logo pe-5">
+                <a href="index.html">
+                    <img src="assets/img/logo.svg" alt="logo">
+                </a>
+            </div>
+            <nav class="d-none d-lg-block">
+                <ul class="nav m-0 p-0">
+                    <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">BIKES</a></li>
+                    <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">PARTS</a></li>
+                    <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">MENS</a></li>
+                    <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">WOMENS</a></li>
+                    <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">EXPERIENCE H-D</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="d-flex align-items-center">
+            <span class="search pb-1 d-none d-sm-block">
+                <i class='bx bx-search'></i>
+            </span>
+            <button class="signin text-center border-0 ps-4 bg-white"><i class="bi bi-person-fill d-block"></i>Sign In</button>
+            <button class="menu-control text-center border-0 bg-white ps-4 d-block d-lg-none"><i class='bx bx-menu'></i></button>
+        </div>
+    </header>
+    <!-- ======= HEADER END ======= -->
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap js -->
