--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- ======= Top-Bar ======= -->
-    <div id="topbar" class="d-flex">
+    <div id="topbar" class="d-none d-sm-flex ">
         <div class="container d-flex align-items-center justify-content-end">
             <ul class="nav">
                 <li class="nav-item"><a class="nav-link white" href="#">Learn to Ride</a></li>
