Added Hero Section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@
         </div>
     </div>
     <!-- ======= SignUp-Bar END ======= -->
+    <main>
+        <!-- ======= HERO START ======= -->
+        <section class="hero" id="hero">
+            <div class="row g-0">
+                <div class="col-12 order-2">
+                    <div class="hero-content">
+                        <h1>Harley-Davidson X™440</h1>
+                        <p>Explore the all-new Harley-Davidson X440</p>
+                        <a class="seethebike d-inline-block fw-bold mt-2" href="#">SEE THE BIKE</a>
+                    </div>
+                </div>
+                <div class="col-12 order-1 d-block d-lg-none">
+                    <img src="assets/img/hero-bg.jpg" class="img-fluid" alt="hero-bg">
+                </div>
+            </div>
+        </section>
+        <!-- ======= HERO END ======= -->
+    </main>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap js -->
