--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <!-- ======= Top-Bar ======= -->
-    <div id="topbar" class="d-none d-sm-flex ">
+    <div id="topbar" class="d-none d-sm-flex font-roboto">
         <div class="container d-flex align-items-center justify-content-end">
             <ul class="nav">
                 <li class="nav-item"><a class="nav-link white" href="#">Learn to Ride</a></li>
@@ -44,7 +44,7 @@
                 </a>
             </div>
             <nav class="d-none d-lg-block">
-                <ul class="nav m-0 p-0">
+                <ul class="nav m-0 p-0 font-oswald">
                     <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">BIKES</a></li>
                     <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">PARTS</a></li>
                     <li class="nav-item"><a class="d-flex align-items-center nav-link fw-bold" href="#">MENS</a></li>
@@ -154,7 +154,7 @@
         <!-- ======= TOP-LINKS START ======= -->
         <section class="toplinks" id="toplinks">
             <div class="container">
-                <div class="d-flex text-center flex-wrap justify-content-center align-items-center">
+                <div class="d-flex text-center flex-wrap justify-content-center align-items-center font-oswald">
                     <a class="fw-bolder p-3 black" href="#">HARLEY-DAVIDSON-X</a>
                     <a class=" fw-bolder p-3 black" href="#">SPORT</a>
                     <a class="fw-bolder p-3 black" href="#">CRUISER</a>
