Responsive Hero section

--- a/index.html
+++ b/index.html
@@ -137,16 +137,25 @@
     <main>
         <!-- ======= HERO START ======= -->
         <section class="hero" id="hero">
-            <div class="row g-0">
-                <div class="col-12 order-2">
-                    <div class="hero-content">
-                        <h1>Harley-Davidson X™440</h1>
-                        <p>Explore the all-new Harley-Davidson X440</p>
-                        <a class="seethebike d-inline-block fw-bold mt-2" href="#">SEE THE BIKE</a>
-                    </div>
+            <div class="heroDesktop d-none d-lg-block">
+                <div class="hero-content">
+                    <h1 class="bold white">Harley-Davidson X™440</h1>
+                    <p class="fw-normal white py-2">Explore the all-new Harley-Davidson X440</p>
+                    <a class="seethebike d-inline-block fw-bold mt-2 p-3" href="#">SEE THE BIKE</a>
                 </div>
-                <div class="col-12 order-1 d-block d-lg-none">
-                    <img src="assets/img/hero-bg.jpg" class="img-fluid" alt="hero-bg">
+            </div>
+            <div class="heroMobile d-block d-lg-none">
+                <div class="row g-0">
+                    <div class="col-12">
+                        <div class="col-12">
+                            <img src="assets/img/hero-bg.jpg" class="img-fluid" alt="hero-bg">
+                        </div>
+                        <div class="hero-content">
+                            <h1 class="fw-bold white pb-2">Harley-Davidson X™440</h1>
+                            <p class="fw-normal white pb-2">Explore the all-new Harley-Davidson X440</p>
+                            <a class="seethebike d-inline-block fw-bold mt-2 black p-3" href="#">SEE THE BIKE</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
