Added new-collection section

--- a/index.html
+++ b/index.html
@@ -173,6 +173,62 @@
             </div>
         </section>
         <!-- ======= TOP-LINKS END ======= -->
+        <!-- ======= NEW-COLLECTION START ======= -->
+        <section class="new-collection mb-5 py-5" id="new-collection">
+            <div class="container">
+                <h2 class="section-heading black ">Set out on something new</h2>
+                <div class="row">
+                    <div class="col-md-4 pb-4 pb-md-0">
+                        <div class="card rounded-0 bg-transparent border-0 shadow-none">
+                            <div class="card-img">
+                                <img src="assets/img/new-collection1.png" class="img-fluid w-100" alt="New Collection">
+                            </div>
+                            <div class="content">
+                                <h5 class="black pt-2 font-oswald">FAT BOY&#8482; 114</h5>
+                                <p class="black fw-normal pt-2 pe-3">Muscle meets performance in the 2023 Fat Boy 114—A street-eater with an appetite for power.
+                                </p>
+                                <a href="#" class="seethebike fw-bold mt-2 py-3 black d-flex align-items-center">
+                                    SEE THE BIKE <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 pb-4 pb-md-0">
+                        <div class="card rounded-0 bg-transparent border-0 shadow-none">
+                            <div class="card-img">
+                                <img src="assets/img/new-collection2.png" class="img-fluid w-100" alt="New Collection">
+                            </div>
+                            <div class="content">
+                                <h5 class="black pt-2 font-oswald">PAN AMERICA&#8482; 1250 SPECIAL</h5>
+                                <p class="black fw-normal pt-2 pe-3">The road never ends on the 2023 Pan America 1250 Special. Our premier two-wheel multi-tool
+                                    built to endure, designed to explore, and engineered for adventure.
+                                </p>
+                                <a href="#" class="seethebike fw-bold mt-2 py-3 black d-flex align-items-center">
+                                    SEE THE BIKE <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 pb-4 pb-md-0">
+                        <div class="card rounded-0 bg-transparent border-0 shadow-none">
+                            <div class="card-img">
+                                <img src="assets/img/new-collection3.png" class="img-fluid w-100" alt="New Collection">
+                            </div>
+                            <div class="content">
+                                <h5 class="black pt-2 font-oswald">RODE GLIDE&#8482; SPECIAL</h5>
+                                <p class="black fw-normal pt-2 pe-3">The 2023 Road Glide Special is classic touring design paired with premium H-D features. Open
+                                    it up and take it in.
+                                </p>
+                                <a href="#" class="seethebike fw-bold mt-2 py-3 black d-flex align-items-center">
+                                    SEE THE BIKE <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= NEW-COLLECTION END ======= -->
     </main>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
