Added limited-edition section

--- a/index.html
+++ b/index.html
@@ -229,6 +229,28 @@
             </div>
         </section>
         <!-- ======= NEW-COLLECTION END ======= -->
+        <!-- ======= LIMITED--EDITION START ======= -->
+        <section class="limited-edition pb-5" id="limited-edition">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7"><img src="assets/img/limited-edition1.png" alt="" class="img-fluid"></div>
+                    <div class="col-md-5 pt-5 pt-md-0 d-flex align-items-center">
+                        <div class="content">
+                            <h3 class="font-oswald black ">LIMITED EDITION</h3>
+                            <p class="font-oswald black h3">120TH ANNIVERSARY COLLECTION</p>
+                            <p class="black fw-normal pt-2">Style takes a victory lap with all-new jackets, shirts, hoodies and more in the signature Harley-Davidson
+                                black &
+                                orange.
+                            </p>
+                            <a href="#" class="hover01 fw-bold black d-flex align-items-center">
+                                SHOP THE COLLECTION <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= LIMITED--EDITION END ======= -->
     </main>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
