Added new-collection section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,27 @@
             </div>
         </section>
         <!-- ======= LIMITED--EDITION END ======= -->
+        <!-- ======= NEW-ARRIVAL START ======= -->
+        <section class="new-arrival pt-5" id="new-arrival">
+            <div class="container-xxl">
+                <h2 class="section-heading black ">Set out on something new</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="assets/img/new-arrival1.png" class="img-fluid w-100" alt="new-arrival">
+                        <a href="#" class="hover01 pt-3 fw-bold black d-flex align-items-center">
+                            SHOP MEN'S <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="assets/img/new-arrival2.png" class="img-fluid w-100" alt="new-arrival">
+                        <a href="#" class="hover01 pt-3 fw-bold black d-flex align-items-center">
+                            SHOP WOMEN'S <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= NEW-ARRIVAL END ======= -->
     </main>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
