Added Anniversary section

--- a/index.html
+++ b/index.html
@@ -272,6 +272,33 @@
             </div>
         </section>
         <!-- ======= NEW-ARRIVAL END ======= -->
+        <!-- ======= ANNIVERSARY START ======= -->
+        <section class="anniversary py-5 mt-3" id="anniversary">
+            <div class="container-fluid bg-black">
+                <div class="container">
+                    <div class="row py-4">
+                        <div class="col-12 col-lg-4">
+                            <h2 class="white fw-bolder pb-3 pb-lg-0">120th Anniversary Motorcycles</h2>
+                        </div>
+                        <div class="col-12  col-lg-8">
+                            <div class="row py-lg-2">
+                                <div class="col-12 col-md-8 col-lg-12 col-xl-8">
+                                    <p class="white fw-normal pb-3 pb-lg-0">
+                                        Celebrating 120 years of Harley-Davidson pride and craftsmanship with the limited-edition Anniversary Collection of motorcycles.
+                                    </p>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-12 col-xl-4">
+                                    <a href="#" class="white d-inline-block fw-bold transition02">
+                                        EXPLORE THE BIKES
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= ANNIVERSARY END ======= -->
     </main>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
