--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img src="assets/img/new-arrival1.png" class="img-fluid w-100" alt="new-arrival">
-                        <a href="#" class="hover01 pt-3 fw-bold black d-flex align-items-center">
+                        <a href="#" class="hover01 pt-3 fw-bold black d-flex align-items-center pb-3 pb-md-0">
                             SHOP MEN'S <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <img src="assets/img/new-arrival2.png" class="img-fluid w-100" alt="new-arrival">
-                        <a href="#" class="hover01 pt-3 fw-bold black d-flex align-items-center">
+                        <a href="#" class="hover01 pt-3 fw-bold black d-flex align-items-center pb-3 pb-md-0">
                             SHOP WOMEN'S <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
                         </a>
                     </div>
