Added shop-parts section

--- a/index.html
+++ b/index.html
@@ -299,6 +299,60 @@
             </div>
         </section>
         <!-- ======= ANNIVERSARY END ======= -->
+        <!-- ======= SHOP-PARTS start ======= -->
+        <section class="shop-parts pb-5" id="shop-parts">
+            <div class="container">
+                <h2 class="section-heading black ">Shop Parts & Apparel</h2>
+                <div class="row">
+                    <div class="col-md-4 pb-4 pb-md-0">
+                        <div class="card rounded-0 bg-transparent border-0 shadow-none">
+                            <div class="card-img">
+                                <img src="assets/img/shop-parts1.png" class="img-fluid w-100" alt="New Collection">
+                            </div>
+                            <div class="content">
+                                <h5 class="black pt-2 font-oswald">MEN'S GEAR & APPAREL</h5>
+                                <p class="black font-weight-normal pt-2 pe-3 m-0">Express the rider inside on and off the bike with genuine H-D riding and casual gear.
+                                </p>
+                                <a href="#" class="seethebike font-weight-bold fs-6 py-2 black d-flex align-items-center hover01">
+                                    SHOP MEN'S <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 pb-4 pb-md-0">
+                        <div class="card rounded-0 bg-transparent border-0 shadow-none">
+                            <div class="card-img">
+                                <img src="assets/img/shop-parts2.png" class="img-fluid w-100" alt="New Collection">
+                            </div>
+                            <div class="content">
+                                <h5 class="black pt-2 font-oswald">PARTS & ACCESSORIES</h5>
+                                <p class="black font-weight-normal pt-2 pe-3 m-0">Throw it into high gear. Now is the perfect time to revamp your ride.
+                                </p>
+                                <a href="#" class="seethebike font-weight-bold fs-6 py-2 black d-flex align-items-center hover01">
+                                    SHOP PARTS <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 pb-4 pb-md-0">
+                        <div class="card rounded-0 bg-transparent border-0 shadow-none">
+                            <div class="card-img">
+                                <img src="assets/img/shop-parts3.png" class="img-fluid w-100" alt="New Collection">
+                            </div>
+                            <div class="content">
+                                <h5 class="black pt-2 font-oswald">WOMEN'S GEAR & APPAREL</h5>
+                                <p class="black font-weight-normal pt-2 pe-3 m-0">Show the world who you ride with. Get all your H-D riding and casual gear here.
+                                </p>
+                                <a href="#" class="seethebike font-weight-bold fs-6 py-2 black d-flex align-items-center hover01">
+                                    SHOP WOMEN'S <i class="bi bi-arrow-right ps-2 fs-4 transition02"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ======= SHOP-PARTS END ======= -->
     </main>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
