added footer logo

--- a/index.html
+++ b/index.html
@@ -353,6 +353,15 @@
             </div>
         </section>
         <!-- ======= SHOP-PARTS END ======= -->
+        <!-- ======= FOOTER START ======= -->
+        <footer class="footer bg-black pb-5" id="footer">
+            <div class="container">
+                <div class="sec1 border-bot">
+                    <img src="assets/img/logo-2.png" class="logo-2 img-fluid py-5 d-flex m-auto ms-md-7" alt="logo">
+                </div>
+            </div>
+        </footer>
+        <!-- ======= FOOTER END ======= -->
     </main>
     <!-- Jquery -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
