--- a/index.html
+++ b/index.html
@@ -357,7 +357,59 @@
         <footer class="footer bg-black pb-5" id="footer">
             <div class="container">
                 <div class="sec1 border-bot">
-                    <img src="assets/img/logo-2.png" class="logo-2 img-fluid py-5 d-flex m-auto ms-md-7" alt="logo">
+                    <img src="assets/img/logo-2.png" class="logo-2 img-fluid py-5 d-flex m-auto ms-lg-7" alt="logo">
+                </div>
+                <!-- ===== DESKTOP ===== -->
+                <div class="sec2 d-none d-md-block border-bot">
+                    <div class="row g-0 pt-5 ps-lg-7">
+                        <div class="col-md-4">
+                            <div>
+                                <span href="#" class="title font-oswald fw-bold white transition02">LEARN TO RIDE</span>
+                                <ul class="sub-title">
+                                    <li><a href="#" class="font-weight-normal white transition02">Motorcycle Training</a></li>
+                                </ul>
+                                <span href="#" class="title font-oswald fw-bold white transition02">CUSTOMER SUPPORT</span>
+                                <ul class="sub-title">
+                                    <li><a href="#" class="font-weight-normal white transition02">Contact Us</a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Offers</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div>
+                                <span href="#" class="title font-oswald fw-bold white transition02">MOTORCYCLE SERVICES</span>
+                                <ul class="sub-title">
+                                    <li><a href="#" class="font-weight-normal white transition02">Authorised Service</a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02 hover02">Owner's Manuals
+                                            <i class="bi bi-arrow-up-right fs-6 ps-1"></i></a>
+                                    </li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Maintenance Schedules<i class="bi bi-arrow-up-right fs-6 ps-1"></i></a>
+                                    </li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Software Updates<i class="bi bi-arrow-up-right fs-6 ps-1"></i></a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Roadside Assistance</a></li>
+                                </ul>
+                                <span href="#" class="title font-oswald fw-bold white transition02">FINANCING</span>
+                                <ul class="sub-title">
+                                    <li><a href="#" class="font-weight-normal white transition02">Motorcycle Financing</a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Apply for Financing<i class="bi bi-arrow-up-right fs-6"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4 ps-sm-5">
+                            <div>
+                                <span href="#" class="title font-oswald fw-bold white transition02">ABOUT US</span>
+                                <ul class="sub-title">
+                                    <li><a href="#" class="font-weight-normal white transition02">Our Company<i class="bi bi-arrow-up-right fs-6 ps-1"></i></a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Careers</a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Investors<i class="bi bi-arrow-up-right fs-6 ps-1"></i></a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Sustainability</a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Become a Dealer</a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Factory Tours</a></li>
+                                    <li><a href="#" class="font-weight-normal white transition02">Museum</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
