--- a/index.html
+++ b/index.html
@@ -411,6 +411,50 @@
                         </div>
                     </div>
                 </div>
+                <div class="sec3 border-bot py-3 d-flex align-items-center">
+                    <ul class="d-flex flex-wrap  m-0 p-0 ps-lg-8">
+                        <li class="px-3 my-3 border-end"><a href="#" class="white d-block d-lg-inline-block">Sitemap</a></li>
+                        <li class="px-3 my-3 pe-5"><a href="#" class="white d-block d-lg-inline-block">Disclaimers</a></li>
+                        <li class="px-3 my-3 border-end"><a href="#" class="white d-block d-lg-inline-block">Terms of Use</a></li>
+                        <li class="px-3 my-3 border-end"><a href="#" class="white d-block d-lg-inline-block">Privacy Policy</a></li>
+                        <li class="px-3 my-3 border-end"><a href="#" class="white d-block d-lg-inline-block">Cookie Policy</a></li>
+                        <li class="px-3 my-3"><a href="#" class="white d-block d-lg-inline-block">Manage Cookie Preferences</a></li>
+                    </ul>
+                </div>
+                <div class="sec4 pt-5 d-flex align-items-center">
+                    <div class="row align-items-center p-0 ps-lg-7">
+                        <div class="col-12 col-md-6 col-xl-3 order-0">
+                            <a class="language-btn mb-4 white text-decoration-none rounded-2 d-flex justify-content-between align-items-center" href="#">
+                                <div>
+                                    <img src="assets/img/india.png" alt="india" class="india-img">India - English
+                                </div>
+                                <i class='bx bxs-chevron-down'></i>
+                            </a>
+                        </div>
+                        <div class="col-12 order-2 col-xl-6 order-xl-1">
+                            <div class="desc mb-4 text-center text-xl-start">
+                                ©2023 H-D or its affiliates. HARLEY-DAVIDSON, HARLEY, H-D, and the Bar and Shield Logo are among the trademarks of H-D U.S.A., LLC.
+                                Third-party trademarks are the property of their respective owners.
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 order-1 col-xl-3 order-xl-2">
+                            <div class="text-center">
+                                <a class="white text-decoration-none fs-1" href="https://www.facebook.com/HarleyDavidsonindia/">
+                                    <i class='bx bxl-facebook'></i>
+                                </a>
+                                <a class="white text-decoration-none fs-1" href="https://twitter.com/HarleyIndia">
+                                    <i class='bx bxl-twitter'></i>
+                                </a>
+                                <a class="white text-decoration-none fs-1" href="https://www.instagram.com/harleydavidson_india/">
+                                    <i class='bx bxl-instagram'></i>
+                                </a>
+                                <a class="white text-decoration-none fs-1" href="https://www.youtube.com/user/harleydavidsonindia">
+                                    <i class='bx bxl-youtube'></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
         <!-- ======= FOOTER END ======= -->
