Added meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Screw it, let's ride.">
     <title>Shop Harley-Davidson Motorcycle</title>
     <!-- FAV-iCON -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
